Interpretações de todos os 'D' e mudança de nome
Coloquei todas as interpretações pro PPG 243 e alterei os nomes de alguns gráficos como combinado com o Jonas.

--- a/RelatorioFinalTotal.rmd
+++ b/RelatorioFinalTotal.rmd
@@ -1040,14 +1040,14 @@ orient.240.mestrado.df %>%
 
 AAAAAAA
 
-###Relação de Orientações Concluídas x Publicações por área:
+###Concentração de áreas por grandes áreas:
 ```{r echo=FALSE}
 perfil.240.df.areas.de.atuacao %>%
   select(-sub_area, -especialidade) %>%
   distinct() %>%
   ggplot(aes(publicacoes, orientacoes_concluidas, color = area)) +
   geom_jitter(shape = 2, size = .8) +
-  ggtitle('Relação de Orientações Concluídas x Publicações') +
+  ggtitle('Concentração de áreas por grandes áreas') +
   labs(x='Publicações',y='Orientações concluídas') + facet_wrap(grande_area ~ ., ncol = 2)
 ```
 
@@ -1206,14 +1206,14 @@ orient.242.mestrado.df %>%
 
 BBBBBBB
 
-###Relação de Orientações Concluídas x Publicações por área:
+###Concentração de áreas por grandes áreas:
 ```{r}
 perfil.242.df.areas.de.atuacao %>%
   select(-sub_area, -especialidade) %>%
   distinct() %>%
   ggplot(aes(publicacoes, orientacoes_concluidas, color = area)) +
   geom_jitter(shape = 2, size = .8) +
-  ggtitle('Relação de Orientações Concluídas x Publicações') +
+  ggtitle('Concentração de áreas por grandes áreas') +
   labs(x='Publicações',y='Orientações concluídas') + facet_wrap(grande_area ~ ., ncol = 2)
 ```
 
@@ -1248,12 +1248,12 @@ public.243.periodico.df %>%
   summarise(Quantidade = n()) %>%
   ggplot(aes(ano, Quantidade, fill = ano)) +
   geom_bar(position = "stack",stat = "identity") +
-  ggtitle("Periodicos publicados por ano") +
+  ggtitle("Periódicos publicados por ano") +
   geom_text(aes(label=Quantidade), vjust=-0.3, size=2.5)+
-  theme_minimal() + labs(x="Ano",y="Quantidade de Periodicos")
+  theme_minimal() + labs(x="Ano",y="Quantidade de Periódicos")
 ```
 
-CCCCCCCCC
+Este gráfico demonstra a quantidade de periódicos por ano para a PPG de Biologia molecular. É possível notar que por uma margem, as publicações tem uma quantidade constante, a despeito de 2012 que foi significativamente menor que os outros anos.
 
 ###Quantidade de periodicos publicados por professor(a) entre 2010 e 2017
 ```{r}
@@ -1268,7 +1268,7 @@ perfil.243.df %>%
   geom_hline(yintercept = sum(perfil.243.df %>% summarize(x = median(PERIODICO))), color = "red")
 ```
 
-CCCCCCC
+Este gráfico de dispersão demonstra para quantas área pertence (indicada pelas cores dos pontos), há uma homogeinidade na quantidade de publicações, exceto para alguns poucos pontos que deslocam a média para cima. A barra vermelha demonstra a mediana da quantidade de publicações.
 
 ###Número de areas de pesquisa e quantidade de eventos por pesquisador
 ```{r}
@@ -1283,7 +1283,7 @@ perfil.243.df %>%
   geom_hline(yintercept = sum(perfil.243.df %>% summarize(x = median(EVENTO))), color = "red")
 ```
 
-CCCCCC
+Como o gráfico anterior, para cada pesquisador e pela quantidade de áreas, mostra-se em quantos eventos foram presentes. Nesta figura, denota-se a heterogeneidade, onde há uma grande quantidade de pesquisadores que participam de poucos eventos, bem como pesquisadores que participam de muitos, porém com uma dispersão muito maior e menor agrupamento em torno da mediana. 
 
 ###Publicação de livros por pais/ano
 ```{r}
@@ -1294,7 +1294,7 @@ public.243.livros.df %>%
   xlab("Ano") + ylab("Pais") + geom_jitter()
 ```
 
-CCCCCCCCC
+Perce-be por esta figura, que para a PPG de Biologia Molecular, há uma predominancia de livros publicados no Brasil e uma carência de difusão de informação para outros países, uma vez que poucos livros foram publicados no exterior.
 
 ###Publicações de capítulos de livros por ano/país
 ```{r}
@@ -1306,7 +1306,7 @@ perfil.243.df.publicacoes %>%
   labs(x='Tipo de produção',y='País')
 ```
 
-CCCCCCCCC
+Esta figura como a anterior, mostra que a maioria de capítulos de livos e a maioria de livros inteiros é publicada no Brasil. Porém para a quantidade de capítulos, há uma maior homogeneidade de publicações no esterior, uma vez que há uma boa quantidade de publicações na Holanda e nos Estados Unidos.
 
 ###Eventos nacionais e internacionais
 ```{r}
@@ -1320,7 +1320,7 @@ public.243.eventos.df %>%
   xlab("Ano") + ylab("Pais") + geom_jitter()
 ```
 
-CCCCCCCCC
+Dos eventos participados, a maioria exorbitante foi no Brasil com uma expressividade no exterior quase constante para os Estados Unidos, e temporária para outros países, como a Bélgica e a Espanha (que tiveram eventos somente no ano de 2011), Grã-Bretanha (que tiveram eventos nos anos de 2011 e 2014 somente), a Suíça (que teve eventos somente em 2010) e a Colômbia (que teve eventos somente em 2014).
 
 ###Orientacoes completas por ano e natureza
 ```{r}
@@ -1334,7 +1334,7 @@ orient.243.df %>%
   labs(x="Ano",y="Quantidade de Orientações")
 ```
 
-CCCCCCCCC
+Este gráfico de tendência compara a quantidade de orientações e a natureza destes por ano para a PPG de Biologia Molecular. É notável que o aumento até o ano de 2014 era expressivo para as dissetações de mestrado e supervisões de doutorado, tendencia que se alterou para a queda a partir de 2014, onde em 2014 houveram mais que 40 dissertações de mestrado, enqunato em 2017 caiu para 11. A quantidade de teses de doutorado caiu desde 2012 e manteve-se constante em uma margem até 2017.
 
 ###Evolução temporal de orientações em andamento e concluídas
 ```{r}
@@ -1344,7 +1344,7 @@ perfil.243.df.orientacoes %>% group_by(ano, situacao) %>%
   ggtitle("Disposição de orientações por ano")
 ```
 
-CCCCCCCCC
+A disposição das orientações e das naturezas de orientações é descrita na figura acima. Nesta figura, percebe-se a tendencia de aumento de orientações em andamento em todas as naturezas de pós-graduações. É notável também que mesmo não houvendo orientações em andamento para alguns anos, ainda haviam dissertações concluídas. Este fato se deve pela a recepção dos docentes para alunos de outras instituições, nas quais estes participavam das bancas e das orientações destes alunos.
 
 ###Índice de bolsas entre naturezas e evolução temporal
 ```{r}
@@ -1357,7 +1357,7 @@ bolsas.243.df %>%
   labs(x="Ano",y="Índice de bolsas")
 ```
 
-CCCCCCCCCCCC
+Na figura acima, demonstra-se a quantidade de bolsas por ano para cada natureza de orientação. É notável a queda para 2011 nas teses de doutorado e superviões de pós doutorado, algo que não se repetiu em nenhum dos outros anos, que continuaram em sua margem de variação normal.
 
 ###Cursos de Mestrado e total de alunos no período (2011-2017)
 ```{r}
@@ -1369,21 +1369,20 @@ orient.243.mestrado.df %>%
   ggtitle('Total de orientações de mestrado') +
   labs(x='Quantidade de alunos',y='Curso do mestrando')
 ```
+A figura acima demonstra no eixo ordenado que um mesmo orientador pode ter alunos em diversos PPGs e compara a quantidade de alunos para cada PPG. Há uma concentração para uma grande quantidade de alunos no programa de Biologia Molecular - o que era esperado e de áreas correlacionadas, que por coincidência são justamente os programas de Biologia Animal e Patologia Molecular. Observe que no eixo abcisso, os números são tomados como fatores para uma quebra de escala, que não seria possível em valores numéricos.
 
-CCCCCCCCC
-
-###Relação de Orientações Concluídas x Publicações por área:
+###Concentração de áreas por grandes áreas:
 ```{r}
 perfil.243.df.areas.de.atuacao %>%
   select(-sub_area, -especialidade) %>%
   distinct() %>%
   ggplot(aes(publicacoes, orientacoes_concluidas, color = area)) +
   geom_jitter(shape = 2, size = .8) +
-  ggtitle('Relação de Orientações Concluídas x Publicações') +
+  ggtitle('Concentração de áreas por grandes áreas') +
   labs(x='Publicações',y='Orientações concluídas') + facet_wrap(grande_area ~ ., ncol = 2)
 ```
 
-CCCCCCC Lembrando que um pesquisador possui mais de uma grande area, o pesquisador se repete entre diferentes graficos
+A figura de gráficos acima explicita que a maior concentração de publicações é dentro da grande área de Ciências Biológicas, como o esperado, dado que ainda ocorrem orientações em outras grandes areas. É visto que os números das áreas que se destacam em cada grande área condiz com sua natureza, uma vez que psicologia é de fato mais presente em Ciencias Humanas, como exemplo. Lembrando que um pesquisador possui mais de uma grande area, o pesquisador se repete entre diferentes graficos
 
 ###Quantidade de Orientações e Publicações pelo Número de Áreas
 ```{r}
@@ -1393,19 +1392,7 @@ perfil.243.areas %>%
   ggtitle('Orientações e Publicações pelo Número de Áreas') +
   labs(x='Publicações',y='Orientações concluídas') + facet_wrap(. ~ num_areas)
 ```
-
-CCCCCCCCCC Quem trabalha em mais áreas diferentes publica/orienta mais?
-
-###Presença em congressos internacionais por número de orientações:
-```{r}
-especialidade.243.orient %>%
-  ggplot(aes(internacional, orientacoes_concluidas, color = especialidade)) +
-  geom_jitter(size = .8) +
-  ggtitle('Orientações concluidas x Participação em congressos internacionais') +
-  labs(x='Participacao internacional',y='Orientações concluídas')
-```
-
-CCCCCCCCCCCCC
+Quem trabalha em mais áreas diferentes publica/orienta mais? A figura acima mostra que não, uma vez que quem trabalha em mais áreas orienta mais pessoas, porém publica menosn em relação a quem trabalha em menos áreas.
 
 ### Grafico de barras; periodicos por ano; Biologia 313
 ```{r}
@@ -1538,14 +1525,14 @@ orient.313.mestrado.df %>%
 
 DDDDDDDDD
 
-###Relação de Orientações Concluídas x Publicações por área:
+###Concentração de áreas por grandes áreas:
 ```{r}
 perfil.313.df.areas.de.atuacao %>%
   select(-sub_area, -especialidade) %>%
   distinct() %>%
   ggplot(aes(publicacoes, orientacoes_concluidas, color = area)) +
   geom_jitter(shape = 2, size = .8) +
-  ggtitle('Relação de Orientações Concluídas x Publicações') +
+  ggtitle('Concentração de áreas por grandes áreas') +
   labs(x='Publicações',y='Orientações concluídas') #+ facet_wrap(grande_area ~ ., ncol = 2)
 #Comentei o Facet pois ele oculta a amostra diferenciada
 ```
